# pjrt-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  api_coverage.md  code_review.md  rustfmt.toml  safety_review.md  todo.md  todos.md  vendor_pjrt.sh
.github/: FUNDING.yml
.github/instructions/: ask-question.instructions.md
.github/workflows/: rust.yml
docs/: api_reference.md  api_review.md  capi_coverage.md  review_v2.md
pjrt/: Cargo.toml  README.md
pjrt-sys/: Cargo.toml  README.md  build.rs  wrapper.h
pjrt-sys/include/xla/backends/profiler/plugin/: profiler_c_api.h
pjrt-sys/include/xla/pjrt/c/: pjrt_c_api.h  pjrt_c_api_callback_extension.h  pjrt_c_api_custom_partitioner_extension.h  pjrt_c_api_ffi_extension.h  pjrt_c_api_gpu_extension.h  pjrt_c_api_layouts_extension.h  pjrt_c_api_memory_descriptions_extension.h  pjrt_c_api_phase_compile_extension.h  pjrt_c_api_profiler_extension.h  pjrt_c_api_raw_buffer_extension.h  pjrt_c_api_stream_extension.h  pjrt_c_api_triton_extension.h
pjrt-sys/protos/xla/: autotuning.proto  xla.proto  xla_data.proto
pjrt-sys/protos/xla/pjrt/proto/: compile_options.proto
pjrt-sys/protos/xla/service/: hlo.proto  metrics.proto
pjrt-sys/protos/xla/stream_executor/: device_description.proto
pjrt-sys/protos/xla/stream_executor/cuda/: cuda_compute_capability.proto
pjrt-sys/protos/xla/stream_executor/sycl/: oneapi_compute_capability.proto
pjrt-sys/src/: lib.rs  structs.rs
pjrt/examples/: async_transfer.rs  basic.rs  basic_bf16.rs  basic_c64.rs  basic_f16.rs  buffer.rs  buffer_reference_count.rs  callback_extension.rs  compile_options.rs  custom_partitioner_extension.rs  device_assignment.rs  event.rs  execution_context.rs  extension_discovery.rs  ffi_extension.rs  gpu_extension.rs  kv_store.rs  layouts_extension.rs  memory.rs  memory_descriptions_extension.rs  memory_layout.rs  multi_device.rs  phase_compile_extension.rs  profiler_extension.rs  prog_bf16.mlir  prog_c64.mlir  prog_f16.mlir  prog_f32.mlir  raw_buffer_extension.rs  stream_extension.rs  stub_extensions.rs  triton_extension.rs
pjrt/src/: api.rs  async_transfer.rs  buffer.rs  callback_ext.rs  chunk.rs  client.rs  compile.rs  cross_host_transfers_ext.rs  custom_partitioner_ext.rs  device.rs  device_assignment.rs  device_description.rs  device_stream.rs  error.rs  event.rs  example_ext.rs  executable.rs  executable_metadata_ext.rs  execute.rs  execute_context.rs  execute_options.rs  extension.rs  ffi_ext.rs  gpu_ext.rs  host_allocator_ext.rs  host_buffer.rs  kv_store.rs  layouts_ext.rs  lib.rs  loaded_executable.rs  megascale_ext.rs  memory.rs  memory_descriptions_ext.rs  memory_layout.rs  named_value.rs  phase_compile_ext.rs  plugin.rs  profiler_ext.rs  program.rs  raw_buffer_ext.rs  (+8 more)
pjrt/src/tests/: async_transfer_tests.rs  buffer_ref_count.rs  core_types_tests.rs  event_tests.rs  executable_tests.rs  execute_tests.rs  extension_tests.rs  memory_tests.rs  mod.rs
