[workspace]
members = [
    "pjrt-sys",
    "pjrt"
]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
pjrt-sys = { path = "./pjrt-sys" }
bindgen = "0.69.4"
bytes = "1"
libloading = "0.8.5"
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = "0.13"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt"] }