[workspace]
members = [
    "pjrt-sys",
    "pjrt"
]

resolver = "2"

[workspace.package]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["science"]

[workspace.dependencies]
pjrt-sys = { path = "pjrt-sys", version = "0.2.0" }
pjrt = { path = "pjrt", version = "0.2.0" }
bindgen = "0.69"
bytes = "1"
libloading = "0.8"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
bon = "2.3"
half = "2.4"
num-complex = "0.4"