[package]
name = "pjrt-sys"
version = "0.54.0"
edition.workspace = true
license.workspace = true
categories.workspace = true
repository = "https://github.com/rai-explorers/pjrt-rs"
homepage = "https://github.com/rai-explorers/pjrt-rs"

[dependencies]
bytes = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
prost-build = { workspace = true }
