[package]
name = "pjrt"
version = "0.54.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
repository = "https://github.com/rai-explorers/pjrt-rs"
homepage = "https://github.com/rai-explorers/pjrt-rs"

[dependencies]
pjrt-sys = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
libloading = { workspace = true }