[package]
name = "pjrt"
version = "0.2.0"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "A safe PJRT C API bindings for Rust"
keywords = ["deep-learning", "machine-learning", "ai"]
edition.workspace = true
license.workspace = true
categories.workspace = true
repository = "https://github.com/rai-explorers/pjrt-rs"
homepage = "https://github.com/rai-explorers/pjrt-rs"

[dependencies]
pjrt-sys = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
libloading = { workspace = true }
bon = { workspace = true }
half = { workspace = true }